fix image paths

--- a/content/projects.json
+++ b/content/projects.json
@@ -15,7 +15,7 @@
   },
   {
     "//comment": "project file names don't matter",
-    "name": "Large Corp",
+    "name": "Large Corp 2",
     "role": "Assistant on Logo Design",
     "cover": "hal-gatewood-mocks.jpg",
     "link": "/large-corp-2"
