fixing up the page load

--- a/content/projects.json
+++ b/content/projects.json
@@ -18,6 +18,7 @@
     "name": "Large Corp 2",
     "role": "Assistant on Logo Design",
     "cover": "hal-gatewood-mocks.jpg",
-    "link": "/large-corp-2"
+    "link": "/large-corp-2",
+    "details_file": "large-corp-2.md"
   }
 ]
